@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-01-28
+CHANGES.txt - 2009-01-30
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- cupsGetNamedDest() did not use the fallback default like
+	  cupsGetDests*() (STR #3082)
 	- The scheduler now provides a LogTimeFormat directive to enable
 	  microseconds in the date and time that are logged.
 	- The scheduler now provides a MultipleOperationTimeout directive to
